# app-free-cowork

./: .gitignore  AGENTS.md  README.md  README.zh-TW.md  install.ps1  pull_ollama_cloud_model.py  setup.ps1  uninstall.ps1
docs/: acceptance-checklist.md  incident-2026-06-11-port-exhaustion.md  incident-2026-06-15-cargo-build-dev-mode.md  sandbox-e2e-status.md
docs/superpowers/plans/: 2026-06-10-tauri-launcher.md  2026-06-15-voice-announcer.md  2026-06-16-local-whisper-voice-input.md  2026-06-16-scheduled-recurring-tasks.md
docs/superpowers/specs/: 2026-06-10-tauri-hotkey-launcher-design.md  2026-06-15-task-completion-voice-announcer-design.md  2026-06-16-local-whisper-voice-input-design.md  2026-06-16-scheduled-recurring-tasks-design.md
launcher/: package-lock.json  package.json
launcher/src/: app.css  app.html
launcher/src-tauri/: Cargo.toml  tauri.conf.json
launcher/src-tauri/capabilities/: default.json
launcher/src-tauri/icons/: icon.icns
launcher/src-tauri/src/: announce.rs  bootstrap.rs  catalog.rs  command.rs  doctor.rs  fx.rs  http.rs  i18n.rs  ipc.rs  launcher.rs  lib.rs  logging.rs  schedule.rs  settings.rs  trust.rs  version.rs  voice.rs
launcher/src/lib/: Announcer.svelte  Palette.svelte  Settings.svelte  Wizard.svelte  api.ts  strings.ts
launcher/src/routes/: +page.svelte
scripts/: e2e-local.ps1  e2e-sandbox-inner.ps1  e2e-sandbox.wsb  verify-bootstrap-urls.ps1
