[package]
name = "launcher"
version = "0.1.0"
description = "Hotkey launcher that runs Claude Code on free Ollama cloud models"
authors = ["jaylooloomi"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
semver = "1.0.28"
ureq = "3.3.0"
chrono = "0.4.45"
wait-timeout = "0.2.1"
dirs = "6.0.0"
tauri-plugin-global-shortcut = "2.3.2"
tauri-plugin-autostart = "2.5.1"
tauri-plugin-single-instance = "2.4.2"
tauri-plugin-notification = "2.3.3"
window-vibrancy = "0.7.1"
windows-version = "0.1.7"
# 截圖功能:讀剪貼簿影像(框選截圖後)+ 編碼 PNG
arboard = "3.4"
image = { version = "0.25", default-features = false, features = ["png"] }
# 通知 icon:把 AUMID 綁定到 icon(寫 HKCU AppUserModelId 機碼)
winreg = "0.52"
windows = { version = "0.62.2", features = ["Win32_UI_Input_KeyboardAndMouse", "Win32_Foundation", "Win32_UI_Shell"] }

[dev-dependencies]
# Serializes the two signin tests that contend on the process-global SIGNIN_GUARD
# mutex; default features (async/logging) are unused, so disable them.
serial_test = { version = "3.5.0", default-features = false }
tempfile = "3.27.0"

